src/ChatBubble.css
.chat-bubble {
    float: right;
    
    margin: 2px 4px 2px 4px;
    padding: 2px 4px 2px 4px;
    
    border: 1px solid #565e80;
    border-radius: 8px;
    
    text-align: right;
}

.theme-light .chat-bubble {
    border-color: black;
}

.chat-bubble .body {
    float: right;
}

.chat-bubble .author {
    font-weight: bold;
}

.chat-bubble .total {
    float: left;
    position: relative;
    top: -12px;
    font-size: 24px;
    font-weight: bold;
}

